Alignemnt fixed of new contact panel.

--- a/src/css/components.panels.css
+++ b/src/css/components.panels.css
@@ -313,7 +313,8 @@
     margin-bottom: 0.5rem;
 }
 
-.other-projects
+.other-projects,
+.contact-panel
 {
     margin: 0;
     width: 100%;
@@ -512,28 +513,30 @@
 .side-panels
 {
     max-width: 1100px;
+	min-height: auto;
+
     margin: 22px auto 80px auto;
-    padding: 0 16px;
+    padding: 10px 16px;
 
 	display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 16px;
     align-items: stretch;
+	
 }
 
 .side-panels > *
 {
-    height: 100%;
+    margin: 0;           
+    align-self: auto;    
+    height: auto; 
 }
 
-.side-panels,
-.side-panels > section
+.other-projects,
+.contact-panel
 {
-    min-height: auto;
-    justify-content: flex-start;
-    padding: 10px;
+    margin: 0;
 }
-
 
 @media (max-width: 900px)
 {
